--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,84 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  font-family: "Poppins", serif;
+}
+
+::-webkit-scrollbar {
+  width: 8px; 
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #10b981;
+  border-radius: 4px;
+
+}
+
+/* Container and spacing for each checkbox */
+.checkbox-wrapper {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+  }
+  
+  /* Base styles for the checkbox */
+  .checkbox {
+    appearance: none;
+    height: 1rem;
+    width: 1rem;
+    border: 1px solid #a1a1aa; 
+    border-radius: 0.25rem;
+    cursor: pointer;
+    transition: background-color 0.2s, border-color 0.2s;
+    position: relative;
+    background-color: transparent; 
+  }
+  
+  /* Styles for checked state */
+  .checkbox.checked {
+    background-color: #10b981; 
+    border-color: #10b981;
+
+  }
+  
+  /* White tick mark for the checked checkbox */
+  .checkbox.checked::after {
+    content: "\002713";
+    color: white !important; 
+    font-size: 0.75rem;
+    font-weight: bold;
+    line-height: 1rem; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #10b981; 
+    border-radius: 0.25rem;
+    z-index: 1; 
+    pointer-events: none; 
+  }
+  
+  /* Styles for unchecked state */
+  .checkbox.unchecked {
+    border-color: #a1a1aa;
+  }
+
+
+
+
+
+  
+  
+  
